--- a/_layout/foot.html
+++ b/_layout/foot.html
@@ -2,6 +2,7 @@
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     {{ if hasmath }}
       {{ insert foot_katex.html }}
     {{ end }}
