add about-this-book pages

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -38,6 +38,11 @@
             <li class="menu-list-item "><a href="/Knowledge/Open_Data/" class="menu-list-link">Open Data</a>
             <li class="menu-list-item "><a href="/Knowledge/Open_Publications/" class="menu-list-link">Open Publications and Transformative Publishing Agreements</a>
           </ul>
+        <li class="menu-list-item {{ispage About/*}}active{{end}}"><a href="/About/About/" class="menu-list-link {{ispage About}}active{{end}}">About</a>
+          <ul class="menu-list-child-list ">
+            <li class="menu-list-item "><a href="/About/About/" class="menu-list-link">About this book</a>
+            <li class="menu-list-item "><a href="/About/Outline/" class="menu-list-link">Outline of sections</a>
+          </ul>
       </ul>
     </div>
     <div class="footer">
