--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -42,6 +42,7 @@
           <ul class="menu-list-child-list ">
             <li class="menu-list-item "><a href="/About/About/" class="menu-list-link">About this book</a>
             <li class="menu-list-item "><a href="/About/Outline/" class="menu-list-link">Outline of sections</a>
+            <li class="menu-list-item "><a href="/About/Missing/" class="menu-list-link">Topics not covered (yet)</a>
           </ul>
       </ul>
     </div>
