--- a/css/franklin.css
+++ b/css/franklin.css
@@ -80,7 +80,7 @@ html {
 }
 
 .franklin-content {
-  position: relative;
+  /* position: relative; /*
   padding-left: 12.5%;
   padding-right: 12.5%;
   line-height: 1.35em;
