--- a/__site/css/jtd.css
+++ b/__site/css/jtd.css
@@ -20,7 +20,7 @@ html {
 
 body {
   margin: 0;
-  position: relative;
+  /* position: relative; */
   padding-bottom: 4rem;
   font-family: -apple-system, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif;
   font-size: inherit;
