--- a/_css/jtd.css
+++ b/_css/jtd.css
@@ -393,7 +393,7 @@ MAIN CONTENT
   }
 
   .main-content {
-    position: relative;
+    /* position: relative; */
     max-width: 800px;
     margin-left: 248px;
   }
